[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Items/Checkpoints/End/End (Idle).png" type="Texture" id=1]
[ext_resource path="res://Scripts/dialog.gd" type="Script" id=2]
[ext_resource path="res://assets/Menu/Buttons/Previous.png" type="Texture" id=3]
[ext_resource path="res://assets/Menu/Buttons/Next.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=54]
extents = Vector2( 17.2259, 4.20102 )

[sub_resource type="RectangleShape2D" id=55]
extents = Vector2( 22.5462, 13.0302 )

[node name="Trophy" type="RigidBody2D"]
position = Vector2( -2.64691, 0.97467 )
collision_mask = 6
mode = 1

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.353561, 27.9307 )
shape = SubResource( 54 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 55 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -120.5
margin_right = 256.0
margin_bottom = 120.5
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -257.667
margin_top = -119.153
margin_right = 256.333
margin_bottom = 63.8468
text = "dfgsdgfdmnjgbfdgfdgfd
gfdgfdgfdgfd
gfdg
fdgfd
gfdg
fdg
fdgfd
gfd
gfdgfd
gfd
gfdgfd
gfd
gfdg
fdg
fdgfdg
fdgfd
gfdg
fdgfdgfd
ffdgfd
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next" type="TouchScreenButton" parent="CanvasLayer/Panel"]
position = Vector2( 482.391, 209.22 )
normal = ExtResource( 4 )

[node name="previous" type="TouchScreenButton" parent="CanvasLayer/Panel"]
position = Vector2( 449.42, 208.888 )
normal = ExtResource( 3 )

[connection signal="body_entered" from="Area2D" to="CanvasLayer/Panel" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="CanvasLayer/Panel" method="_on_Area2D_body_exited"]
[connection signal="pressed" from="CanvasLayer/Panel/next" to="CanvasLayer/Panel" method="_on_next_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/previous" to="CanvasLayer/Panel" method="_on_previous_pressed"]
